test/should-fail/vsgc3994a.f3
/*
 * Regression test
 * VSGC-3994 : Missing error message when variable override non-existent symbol whose clashes with an outer var
 *
 * @test/compile-error
 */

class vsgc3994a {
    var x  = "";
}

class A extends vsgc3994a {
    override var x = "a";
}

class B {
    override var x = "";
}
